--- a/index.html
+++ b/index.html
@@ -3,27 +3,25 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Random Letter Generator</title>
+    <title>汉语拼音</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class="container">
         <div class="header">
-            <h1>Random Letter Generator</h1>
+            <h3>Hàn yǔ pīn yīn</h3>
+            <h1>汉语拼音</h1>
         </div>
         <div class="content">
-            <p>Click the button below to generate a random letter:</p>
             <div class="circle" id="circleElement">
                 <div class="letter" id="randomLetter"></div>
             </div>
             <p class="result" id="letterDescription"></p>
-            <button id="generateButton">Random</button>
+            <button id="generateButton">ចាប់ផ្តើម</button>
         </div>
         
     </div>
-
-
 
     <script src="script.js"></script>
 </body>
