--- a/ShengMu/sheng_mu_step.html
+++ b/ShengMu/sheng_mu_step.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>汉语拼音</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
         
     </div>
 
-    <script src="script.js"></script>
+    <script src="sheng_mu_step.js"></script>
 </body>
 
 </html>
