--- a/option_PinYin.html
+++ b/option_PinYin.html
@@ -73,13 +73,13 @@
         <h3>Hàn yǔ pīn yīn</h3>
         <h1>汉语拼音</h1>
         <div class="options">
-            <a class="option-button" href="/ShengMu/sheng_mu_step.html">Sheng Mu (Step)</a>
+            <a class="option-button" href="/ShengMu/sheng_mu_step.html">Sheng Mu</a>
             <a class="option-button" href="/ShengMu/sheng_mu_random.html">Sheng Mu (Random)</a>
 
-            <a class="option-button" href="/YinMu/yin_mu_step.html">Yin Mu (Step)</a>
+            <a class="option-button" href="/YinMu/yin_mu_step.html">Yin Mu</a>
             <a class="option-button" href="/YinMu/yin_mu_random.html">Yin Mu (Random)</a>
 
-            <a class="option-button" href="/ZhengTiYinJie/zheng_ti_yin_jie_step.html">Zheng Ti Yin Jie (Random)</a>
+            <a class="option-button" href="/ZhengTiYinJie/zheng_ti_yin_jie_step.html">Zheng Ti Yin Jie</a>
             <a class="option-button" href="/ZhengTiYinJie/zheng_ti_yin_jie_random.html">Zheng Ti Yin Jie (Random)</a>
 
             <a class="option-button" href="/RandomAll/randomAll.html">Random All pīn yīn</a>
