--- a/option_PinYin.html
+++ b/option_PinYin.html
@@ -73,16 +73,16 @@
         <h3>Hàn yǔ pīn yīn</h3>
         <h1>汉语拼音</h1>
         <div class="options">
-            <a class="option-button" href="/PinYin/ShengMu/sheng_mu_step.html">Sheng Mu</a>
-            <a class="option-button" href="/PinYin/ShengMu/sheng_mu_random.html">Sheng Mu (Random)</a>
+            <a class="option-button" href="../PinYin/ShengMu/sheng_mu_step.html">Sheng Mu</a>
+            <a class="option-button" href="../PinYin/ShengMu/sheng_mu_random.html">Sheng Mu (Random)</a>
 
-            <a class="option-button" href="/PinYin/YinMu/yin_mu_step.html">Yin Mu</a>
-            <a class="option-button" href="/PinYin/YinMu/yin_mu_random.html">Yin Mu (Random)</a>
+            <a class="option-button" href="../PinYin/YinMu/yin_mu_step.html">Yin Mu</a>
+            <a class="option-button" href="../PinYin/YinMu/yin_mu_random.html">Yin Mu (Random)</a>
 
-            <a class="option-button" href="/PinYin/ZhengTiYinJie/zheng_ti_yin_jie_step.html">Zheng Ti Yin Jie</a>
-            <a class="option-button" href="/PinYin/ZhengTiYinJie/zheng_ti_yin_jie_random.html">Zheng Ti Yin Jie (Random)</a>
+            <a class="option-button" href="../PinYin/ZhengTiYinJie/zheng_ti_yin_jie_step.html">Zheng Ti Yin Jie</a>
+            <a class="option-button" href="../PinYin/ZhengTiYinJie/zheng_ti_yin_jie_random.html">Zheng Ti Yin Jie (Random)</a>
 
-            <a class="option-button" href="/PinYin/RandomAll/randomAll.html">Random All pīn yīn</a>
+            <a class="option-button" href="../PinYin/RandomAll/randomAll.html">Random All pīn yīn</a>
         </div>
     </div>
 
