--- a/RandomAll/randomAll.html
+++ b/RandomAll/randomAll.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>汉语拼音</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
