--- a/ShengMu/sheng_mu_step.html
+++ b/ShengMu/sheng_mu_step.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>汉语拼音</title>
+    <title>声母</title>
     <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body>
     <div class="container">
         <div class="header">
-            <h3>Hàn yǔ pīn yīn</h3>
-            <h1>汉语拼音</h1>
+            <h3>shēng mǔ</h3>
+            <h1>声母</h1>
         </div>
         <div class="content">
             <div class="circle" id="circleElement">
