--- a/option_PinYin.html
+++ b/option_PinYin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>គំនូស</title>
+    <title>汉语拼音</title>
     <style>
         body {
             font-family: Arial, Helvetica, sans-serif, sans-serif;
@@ -73,14 +73,13 @@
         <h3>Hàn yǔ pīn yīn</h3>
         <h1>汉语拼音</h1>
         <div class="options">
-            <a class="option-button" href="../PinYin/ShengMu/sheng_mu_step.html">Sheng Mu</a>
-            <a class="option-button" href="../PinYin/ShengMu/sheng_mu_random.html">Sheng Mu (Random)</a>
-
-            <a class="option-button" href="../PinYin/YinMu/yin_mu_step.html">Yin Mu</a>
-            <a class="option-button" href="../PinYin/YinMu/yin_mu_random.html">Yin Mu (Random)</a>
-
-            <a class="option-button" href="../PinYin/ZhengTiYinJie/zheng_ti_yin_jie_step.html">Zheng Ti Yin Jie</a>
-            <a class="option-button" href="../PinYin/ZhengTiYinJie/zheng_ti_yin_jie_random.html">Zheng Ti Yin Jie (Random)</a>
+            <a class="option-button" href="../PinYin/ShengMu/sheng_mu_step.html">shēng mǔ</a>
+            <a class="option-button" href="../PinYin/YinMu/yin_mu_step.html">yùn mǔ</a>
+            <a class="option-button" href="../PinYin/ZhengTiYinJie/zheng_ti_yin_jie_step.html">zhěng tǐ rèn dú yīn jié</a>
+            
+            <a class="option-button" href="../PinYin/ShengMu/sheng_mu_random.html">shēng mǔ (Random)</a>
+            <a class="option-button" href="../PinYin/YinMu/yin_mu_random.html">yùn mǔ (Random)</a>
+            <a class="option-button" href="../PinYin/ZhengTiYinJie/zheng_ti_yin_jie_random.html">zhěng tǐ rèn dú yīn jié (Random)</a>
 
             <a class="option-button" href="../PinYin/RandomAll/randomAll.html">Random All pīn yīn</a>
         </div>
